mockit.MockUpForSingleClassInstanceTest.mockupAffectingOneInstanceButNotOthersOfSameClass が動かないがコミット